--- a/templates/base.html
+++ b/templates/base.html
@@ -25,18 +25,27 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'kanban:board' %}">Kanban</a>
+                    </li>
+                </ul>
                 <form class="d-flex me-auto" method="get" action="{% url 'kanban:search_tasks' %}">
                     <input class="form-control me-2" type="search" name="q" placeholder="Search tasks" aria-label="Search" required>
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
                 <div class="dropdown">
                     <a href="#" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                        <img src="{{ user.profile.profile_image.url }}" alt="Profile" class="rounded-circle navbar-avatar" style="height: 40px;">
+                        <img src="{% if user.is_authenticated and user.profile.profile_image %}{{ user.profile.profile_image.url }}{% else %}{% static 'profile_images/default.png' %}{% endif %}" alt="Profile" class="rounded-circle navbar-avatar" style="height: 40px;">
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
-                        <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#profileModal">Profile</a></li>
-                        <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#settingsModal">Settings</a></li>
-                        <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#logoutModal">Logout</a></li>
+                        {% if user.is_authenticated %}
+                            <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#profileModal">Profile</a></li>
+                            <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#settingsModal">Settings</a></li>
+                            <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#logoutModal">Logout</a></li>
+                        {% else %}
+                            <li><a class="dropdown-item" href="{% url 'account_login' %}">Login</a></li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
@@ -73,7 +82,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                    <img src="{{ user.profile.profile_image.url }}" alt="Profile" class="rounded-circle profile-avatar" style="height: 100px;">
+                    <img src="{% if user.profile.profile_image %}{{ user.profile.profile_image.url }}{% else %}{% static 'profile_images/default.png' %}{% endif %}" alt="Profile" class="rounded-circle profile-avatar" style="height: 100px;">
                     <h3>{{ user.get_full_name }}</h3>
                     <p class="email">Email: {{ user.email }}</p>
                     <p class="bio">Bio: {{ user.profile.bio }}</p>
@@ -126,7 +135,6 @@
         </div>
     </div>
 
-
     <!-- Confirm Delete Modal -->
     <div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true" data-delete-account-url="{% url 'kanban:delete_account' %}">
         <div class="modal-dialog">
@@ -165,7 +173,6 @@
         </div>
     </div>
 
-
     <div class="container mt-4">
         {% block content %}{% endblock %}
     </div>
@@ -178,4 +185,9 @@
     {% block extra_js %}{% endblock %}
 </body>
 </html>
+
+
+
+
+
 
